--- a/6th lesson/SnakeGame1.html
+++ b/6th lesson/SnakeGame1.html
@@ -70,7 +70,7 @@
         //f = food; i = index
         ctx.save();
         ctx.fillStyle = food.color;
-        ctx.fillRect=(f.x, f.y, food.width, food.height);
+        ctx.fillRect(f.x, f.y, food.width, food.height);
         ctx.restore();
 
     }
